test/files/invalid/struct_self_reference.fbs
struct Foo {
  x: Bar;
}

struct Bar {
  y: Foo;
}