test/files/invalid/struct_self_reference.stderr
error: Structs are not allowed to contain themselves, as it implies infinite size
  ┌─ test/files/invalid/struct_self_reference.fbs:1:1
  │
1 │ struct Foo {
  │ ---------- Foo contains itself directly

